premières modifs (pas encore de php)

--- a/cssIndex.css
+++ b/cssIndex.css
@@ -39,6 +39,33 @@ h2 {
 
  }
 
+ .RAZ {
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(10, 50, 150, 0.5);
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.RAZ:hover{
+  background-color: rgba(50,75,90,1);
+}
+
+.RAZ:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
  button:hover {
     background-color: rgba(255, 125, 200, 1);
 }
