--- a/cssIndex.css
+++ b/cssIndex.css
@@ -1,14 +1,22 @@
 body {
  background-color: grey; 
- font-family: Ubuntu;
+ font-family: 'Lucida Sans';
  font-size: 100%;
  }
+
+.erreur {
+  color: yellow;  
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 120%;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em rgb(14, 219, 76)
+}
 
 h1 {
  font-size: 200%; 
  color: red; 
  text-align: center;
- font-family: Ubuntu;
+ font-family: 'Lucida Sans';
  }
 
 
@@ -16,11 +24,11 @@ h2 {
  font-size: 150%; 
  color: darkred; 
  padding-left: 15px;
- font-family: Ubuntu;
+ font-family: 'Lucida Sans';
   text-align: center;
  }
 
- button {
+.button {
   	border: 0;
     line-height: 2.5;
     padding: 0 20px;
@@ -66,11 +74,11 @@ h2 {
                 inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
- button:hover {
+.button:hover {
     background-color: rgba(255, 125, 200, 1);
 }
 
-button:active {
+.button:active {
     box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
                 inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
