--- a/cssIndex.css
+++ b/cssIndex.css
@@ -116,7 +116,7 @@ h2 {
 .displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto;
 }
 
 .badpage {
@@ -134,8 +134,9 @@ h2 {
   border-radius: 12px;
   background: url(Pictures/saucisson.png) no-repeat;
   background-color: rgba(255, 255, 255, 0.452);
-
   background-position:center center;
+  width: 150px; 
+  height: 90px;
 }
 
 .deco:hover {
@@ -190,7 +191,7 @@ li a:hover:not(.active) {
 .PVC{
   position:relative;
   left:20%;
-  width:80%;
+  width:75%;
 }
 
 
@@ -223,3 +224,10 @@ li a:hover:not(.active) {
     padding: 5px;
     text-align: center;
     }
+
+
+  .fixedModifProfil{
+    position: fixed;
+    top : 15%;
+    right: 3%;
+  }
